Fixed overflow a link.

--- a/app/less/globals.less
+++ b/app/less/globals.less
@@ -35,6 +35,13 @@ input[type="text"], textarea {
   }
 }
 
+.truncate {
+  max-width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 .relative {
   position: relative;
 }
